remuves main H1 tags

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>COODING PILL SU GIT & GITHUB
-        </h1>
-        <footer>EPICODE</footer>
-    </main>
+    <main></main>
+    <footer>EPICODE</footer>
 </body>
 </html>
